Tiny working Janino code gen example